# piasi_reader

./: README.md  __init__.py  __version.py  giadr.py  grh.py  iasi_l1c_native_file.py  mdr.py  mphr.py  parameters.py  piasi_reader.py  pyproject.toml  setup.py  utilities.py
records/: giadr.py  grh.py  mdr.py  mphr.py  record_content.py
src/piasi_reader/: __init__.py  iasi_l1c_native_file.py  parameters.py  utilities.py
src/piasi_reader/records/: mdr.py
